--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+  color: rgba(44, 44, 44, 0.87);
   background-color: #242424;
 
   font-synthesis: none;
@@ -24,7 +24,7 @@ a:hover {
 
 header, footer {
   background: #333;
-  color: #fff;
+  color: #ffffff;
 }
 
 body {
@@ -68,6 +68,6 @@ button:focus-visible {
     color: #747bff;
   }
   button {
-    background-color: #f9f9f9;
+    background-color: #ffffff;
   }
 }
