--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(44, 44, 44, 0.87);
+  color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
 
   font-synthesis: none;
@@ -12,62 +12,94 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-header, footer {
-  background: #333;
-  color: #ffffff;
-}
-
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
+  padding: 0;
   min-width: 320px;
   min-height: 100vh;
 }
 
+a {
+  font-weight: 500;
+  color: white;
+  text-decoration: inherit;
+  padding:0.5rem 0;
+  transition: all ease 5s;
+}
+a::after {
+  display: block;
+content: '';
+height: 2px;
+width: 0;
+background-color: orange;  transition: all ease .5s;
+}
+
+a:hover::after {
+  content: '';
+  width: 100%;
+  }
+
+a.active::after {
+height: 2px;
+width: 100%;
+background-color: orange;  transition: all ease .3s;
+}
+
+h1 a {
+  color:white;
+}
+h1 a:hover {
+  color:inherit;
+}
+
+header{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+footer{
+position: fixed;
+bottom: 0;
+width: 100%;
+text-align: center;
+}
+
+header, footer {
+  background: #333;
+  color: #fff;
+  padding: 1rem 4rem
+}
+
+nav ul li {
+  display: inline-block;
+  padding: 1rem;
+
+}
+main {
+  padding: 4rem;
+}
+
 h1 {
   font-size: 3.2em;
-  line-height: 5rem;
+  line-height: 1.1;
+}
+.boxes {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1rem;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.box {
+  background: white;
+  border-radius: 5px;
+  color: #333;
+  padding:1rem
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #ffffff;
-  }
+.box p:first-child{
+  font-weight: 700;
+}
+.box p:last-child{
+font-style: italic;
 }
